force-app/main/default/objects/leaseworks__Sublease_Clauses__c/leaseworks__Sublease_Clauses__c.object-meta.xml
<CustomObject>
    <label>Wetlease and Sublease Clause</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Sublease Clause ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wetlease and Sublease Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>