force-app/main/default/objects/leaseworks__Sublease_Clauses__c/fields/Consent_Required__c.field-meta.xml
<CustomField>
    <fullName>Consent_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by customer</description>
    <inlineHelpText>Local field. Tick the box if Consent is required.</inlineHelpText>
    <label>Consent Required?</label>
    <type>Checkbox</type>
</CustomField>