force-app/main/default/objects/leaseworks__Sublease_Clauses__c/fields/leaseworks__Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Acknowledgement__c</fullName>
    <label>Acknowledgement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>