force-app/main/default/objects/leaseworks__Sublease_Clauses__c/fields/leaseworks__Clause__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Clause__c</fullName>
    <label>Clause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved Subleases</fullName>
            </value>
            <value>
                <fullName>Continued Responsibility of Lessee</fullName>
            </value>
            <value>
                <fullName>Lessor Consent</fullName>
            </value>
            <value>
                <fullName>Sublease</fullName>
            </value>
            <value>
                <fullName>Subleasing Proposal Fee</fullName>
            </value>
            <value>
                <fullName>Wetlease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>