force-app/main/default/objects/leaseworks__Sublease_Clauses__c/fields/leaseworks__Sub_Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sub_Lease_Start_Date__c</fullName>
    <label>Sub Lease Start Date</label>
    <type>Date</type>
</CustomField>